# de-fuse

./: .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  README.MD  aclocal.m4  autogen.sh  bitmap.h  compat.h  config.h.in  configure  configure.ac  configure.in  display.c  display.h  event.c  event.h  fuse-emulator_0.10.0.1.orig.tar.gz.delta  fuse-emulator_0.10.0.1.orig.tar.gz.id  fuse-emulator_0.10.0.2.orig.tar.gz.delta  fuse-emulator_0.10.0.2.orig.tar.gz.id  fuse-emulator_0.10.0.orig.tar.gz.delta  fuse-emulator_0.10.0.orig.tar.gz.id  fuse-emulator_0.9.0.orig.tar.gz.delta  fuse-emulator_0.9.0.orig.tar.gz.id  fuse-emulator_1.0.0+dfsg1.orig.tar.gz.delta  fuse-emulator_1.0.0+dfsg1.orig.tar.gz.id  fuse-emulator_1.0.0.1.orig.tar.gz.delta  fuse-emulator_1.0.0.1.orig.tar.gz.id  fuse-emulator_1.0.0.1a+dfsg1.orig.tar.gz.delta  fuse-emulator_1.0.0.1a+dfsg1.orig.tar.gz.id  fuse-emulator_1.0.0.1a.orig.tar.gz.delta  fuse-emulator_1.0.0.1a.orig.tar.gz.id  fuse-emulator_1.0.0.orig.tar.gz.delta  fuse-emulator_1.0.0.orig.tar.gz.id  fuse-emulator_1.1.0+dfsg1.orig.tar.xz.delta  (+109 more)
cmake/: config.cmake
compat/: Makefile.am  dirname.c  getopt1.c
compat/amiga/: Makefile.am  Makefile.in  osname.c  paths.c
compat/linux/: Makefile.in  relative_paths.c
compat/morphos/: Makefile.am  Makefile.in  osname.c
compat/unix/: Makefile.am  Makefile.in  dir.c  file.c  osname.c  paths.c  relative_paths.c  socket.c  timer.c  tuntap.c
compat/wii/: Makefile.am  Makefile.in  osname.c  paths.c  timer.c
compat/win32/: Makefile.am  Makefile.in  osname.c  paths.c  socket.c  timer.c
data/: Makefile.am  Makefile.in
data/win32/: distribution.mk  installer.nsi.in
debian/: README.Debian  changelog  control  copyright  fuse-emulator-common.dirs  fuse-emulator-common.docs  fuse-emulator-common.install  fuse-emulator-common.lintian-overrides  fuse-emulator-common.postrm  fuse-emulator-gtk.install  fuse-emulator-gtk.links  fuse-emulator-gtk.lintian-overrides  fuse-emulator-gtk.postinst  fuse-emulator-gtk.prerm  fuse-emulator-sdl.install  fuse-emulator-sdl.links  fuse-emulator-sdl.lintian-overrides  fuse-emulator-sdl.postinst  fuse-emulator-sdl.prerm  fuse-emulator.install  fuse-gtk.desktop  fuse-sdl.desktop  fuse.desktop  fuse.png.uu  fuse.service  rules  watch
debian/patches/: 01_compile-without-roms.patch  01_configure.patch  02_hildonize.patch  02_missing-roms-help.patch  03_osso_initialize.patch  03_rom-search-path.patch  04_set-name-and-icon.patch  04_unfiltered-audio.patch  05_dialogs.patch  05_fix-missing-roms-crash.patch  06_drawingarea-fixes-fullscreen.patch  06_load-opense-rom.patch  07_disable-autoload.patch  07_remove-unneeded-keys.patch  08_include-zlib.patch  08_n810-keys.patch  09_about.patch  09_dont-use-sdl-audio.patch  10_fix-joystick-crash.patch  bash-completion.patch  button-settings.patch  compile-without-roms.patch  complete-zip-files.patch  desktop-file.patch  disable-autoload.patch  dont-use-sdl-audio.patch  load-opense-rom.patch  manpage-errors.patch  missing-roms-help.patch  phantom-typist-sound.patch  prefer-x11-over-wayland.patch  remove-duplicate-symbol.patch  rom-search-path.patch  select-audio-driver.patch  series  show-fuse-icon.patch
debian/upstream/: metadata  signing-key.asc
debugger/: Makefile.am  Makefile.in  breakpoint.c  breakpoint.h  command.c  commandl.c  commandl.l  commandy.c  commandy.h  commandy.y  debugger.c  debugger.h  debugger_internals.h  disassemble.c  event.c  expression.c  system_variable.c  variable.c
disk/: Makefile.am  Makefile.in  beta.c  beta.h  disk.c  disk.h  fdd.c  fdd.h  plusd.c  plusd.h  upd_fdc.c  upd_fdc.h  wd_fdc.c  wd_fdc.h
hacking/: Makefile.am  Makefile.in
ide/: Makefile.am  Makefile.in  divide.c  divide.h  ide.c  ide.h  simpleide.c  simpleide.h  zxatasp.c  zxatasp.h  zxcf.c  zxcf.h
infrastructure/: Makefile.am  startup_manager.c
lib/: Makefile.am  Makefile.in
m4/: ax_have_qt.m4
machines/: Makefile.am  Makefile.in  machines_periph.c  machines_periph.h  pentagon.c  pentagon.h  pentagon1024.c  pentagon512.c  scorpion.c  spec128.c  spec16.c  spec48.c  spec48.h  spec48_ntsc.c  spec_se.c  specplus2.c  specplus2a.c  specplus3.c  specplus3.h  specplus3e.c  tc2048.c  tc2068.c  tc2068.h  ts2068.c
man/: Makefile.am  Makefile.in  fuse.1
peripherals/: Makefile.am  Makefile.in  ay.c  ay.h  dck.c  fuller.c  fuller.h  if1.c  if1.h  if2.c  if2.h  joystick.c  joystick.h  kempmouse.c  kempmouse.h  melodik.c  melodik.h  multiface.c  printer.c  printer.h  scld.c  scld.h  speccyboot.c  speccyboot.h  specdrum.c  specdrum.h  spectranet.c  spectranet.h  ttx2000s.c  ula.c  ula.h  usource.c  usource.h
peripherals/disk/: Makefile.in  beta.c  beta.h  crc.c  didaktik.c  didaktik.h  disciple.c  disciple.h  disk.c  disk.h  fdd.c  fdd.h  opus.c  opus.h  plusd.c  plusd.h  trdos.c  trdos.h  upd_fdc.c  upd_fdc.h  wd_fdc.c  wd_fdc.h
peripherals/flash/: Makefile.in  am29f010.c
peripherals/ide/: Makefile.in  divide.c  divide.h  divmmc.c  divxxx.c  divxxx.h  ide.c  ide.h  zxcf.c  (+6 more)
perl/: Makefile.am  Makefile.in
pokefinder/: Makefile.am  Makefile.in  pokefinder.c  pokemem.c  pokemem.h
roms/: Makefile.am  Makefile.in
sound/: Makefile.am  Makefile.in  alsasound.c  aosound.c  blipbuffer.c  coreaudiosound.c  dxsound.c  hpsound.c  nullsound.c  osssound.c  pulsesound.c  qtsound.cpp  qtsound.hpp  sdlsound.c  sfifo.c  sunsound.c  wiisound.c  win32sound.c
timer/: Makefile.am  Makefile.in  native.c  sdl.c  timer.c  timer.h
ui/: Makefile.am  Makefile.in  ui.h  uijoystick.c  uijoystick.h  uimedia.h
ui/qt/: Makefile.am  debugger.cpp  debugger.h  debugger.hpp  debugger.ui  hexview.cpp  hexview.h  hexview.ui  options-header.pl  options.pl  qt_ui.cpp  qt_ui.h  qt_ui.hpp  qt_ui.qrc  qt_ui_c_wrap.c  tapebrowser.cpp  tapebrowser.h  tapebrowser.hpp  tapebrowser.ui
unittests/: Makefile.am  Makefile.in  unittests.c  unittests.h
widget/: Makefile.am  Makefile.in  menu_data.c  options.pl
z80/: Makefile.am  Makefile.in  coretest.c  opcodes_base.c  z80.c  z80.h  z80.pl  z80_debugger_variables.c  z80_ed.c  z80_macros.h  z80_ops.c
(+170 files in other folders)
