cmake_minimum_required(VERSION 3.25)

project(
  de-fuse
  LANGUAGES C CXX)

include(libspectrum/cmake/config.cmake)
add_subdirectory(libspectrum)

add_executable(${PROJECT_NAME})

target_link_libraries(${PROJECT_NAME}
    PRIVATE
    libspectrum
)

target_include_directories(${PROJECT_NAME}
    PRIVATE
    .
    compat
    libspectrum
)

include(cmake/config.cmake)

target_sources(${PROJECT_NAME}
    PRIVATE
#sources
    ./compat/dirname.c
    ./compat/getopt.c
    ./compat/getopt1.c
    ./compat/linux/relative_paths.c
    ./compat/unix/dir.c
    ./compat/unix/file.c
    ./compat/unix/osname.c
    ./compat/unix/paths.c
    ./compat/unix/relative_paths.c
    ./compat/unix/socket.c
    ./compat/unix/timer.c
    ./compat/unix/tuntap.c
    ./compat/win32/osname.c
    ./compat/win32/paths.c
    ./compat/win32/socket.c
    ./compat/win32/timer.c
    ./debugger/breakpoint.c
    ./debugger/command.c
    ./debugger/commandl.c
    ./debugger/commandy.c
    ./debugger/debugger.c
    ./debugger/disassemble.c
    ./debugger/event.c
    ./debugger/expression.c
    ./debugger/system_variable.c
    ./debugger/variable.c
    ./display.c
    ./event.c
    ./fuse.c
    ./infrastructure/startup_manager.c
    ./input.c
    ./keyboard.c
    ./loader.c
    ./machine.c
    ./machines/machines_periph.c
    ./machines/pentagon.c
    ./machines/pentagon1024.c
    ./machines/pentagon512.c
    ./machines/scorpion.c
    ./machines/spec128.c
    ./machines/spec16.c
    ./machines/spec48.c
    ./machines/spec48_ntsc.c
    ./machines/specplus2.c
    ./machines/specplus2a.c
    ./machines/specplus3.c
    ./machines/specplus3e.c
    ./machines/spec_se.c
    ./machines/tc2048.c
    ./machines/tc2068.c
    ./machines/ts2068.c
    ./memory_pages.c
    ./mempool.c
    ./menu.c
    ./module.c
    ./movie.c
    ./periph.c
    ./peripherals/dck.c
    ./peripherals/disk/beta.c
    ./peripherals/disk/crc.c
    ./peripherals/disk/didaktik.c
    ./peripherals/disk/disciple.c
    ./peripherals/disk/disk.c
    ./peripherals/disk/fdd.c
    ./peripherals/disk/opus.c
    ./peripherals/disk/plusd.c
    ./peripherals/disk/trdos.c
    ./peripherals/disk/upd_fdc.c
    ./peripherals/disk/wd_fdc.c
    ./peripherals/flash/am29f010.c
    ./peripherals/ide/divide.c
    ./peripherals/ide/divmmc.c
    ./peripherals/ide/divxxx.c
    ./peripherals/ide/ide.c
    ./peripherals/ide/simpleide.c
    ./peripherals/ide/zxatasp.c
    ./peripherals/ide/zxcf.c
    ./peripherals/ide/zxmmc.c
    ./peripherals/if1.c
    ./peripherals/if2.c
    ./peripherals/joystick.c
    ./peripherals/kempmouse.c
    ./peripherals/multiface.c
    ./peripherals/nic/enc28j60.c
    ./peripherals/nic/w5100.c
    ./peripherals/nic/w5100_socket.c
    ./peripherals/printer.c
    ./peripherals/scld.c
    ./peripherals/sound/ay.c
    ./peripherals/sound/covox.c
    ./peripherals/sound/fuller.c
    ./peripherals/sound/melodik.c
    ./peripherals/sound/sp0256.c
    ./peripherals/sound/specdrum.c
    ./peripherals/sound/uspeech.c
    ./peripherals/speccyboot.c
    ./peripherals/spectranet.c
    ./peripherals/ttx2000s.c
    ./peripherals/ula.c
    ./peripherals/usource.c
    ./phantom_typist.c
    ./pokefinder/pokefinder.c
    ./pokefinder/pokemem.c
    ./profile.c
    ./psg.c
    ./rectangle.c
    ./roms/README.copyright
    ./rzx.c
    ./screenshot.c
    ./settings.c
    ./slt.c
    ./snapshot.c
    ./sound/alsasound.c
    ./sound/aosound.c
    ./sound/blipbuffer.c
    ./sound/coreaudiosound.c
    ./sound/dxsound.c
    ./sound/hpsound.c
    ./sound/moc_qtsound.cpp
    ./sound/nullsound.c
    ./sound/osssound.c
    ./sound/pulsesound.c
    ./sound/qtsound.cpp
    ./sound/sdlsound.c
    ./sound/sfifo.c
    ./sound/sunsound.c
    ./sound/wiisound.c
    ./sound/win32sound.c
    ./sound.c
    ./spectrum.c
    ./svg.c
    ./tape.c
    ./timer/native.c
    ./timer/sdl.c
    ./timer/timer.c
    ./ui/fb/fbdisplay.c
    ./ui/fb/fbjoystick.c
    ./ui/fb/fbkeyboard.c
    ./ui/fb/fbmouse.c
    ./ui/fb/fbui.c
    ./ui/gtk/binary.c
    ./ui/gtk/browse.c
    ./ui/gtk/confirm.c
    ./ui/gtk/debugger.c
    ./ui/gtk/fileselector.c
    ./ui/gtk/gtkcompat.c
    ./ui/gtk/gtkdisplay.c
    ./ui/gtk/gtkjoystick.c
    ./ui/gtk/gtkkeyboard.c
    ./ui/gtk/gtkmouse.c
    ./ui/gtk/gtkui.c
    ./ui/gtk/memory.c
    ./ui/gtk/memory_gtk2.c
    ./ui/gtk/picture.c
    ./ui/gtk/pokefinder.c
    ./ui/gtk/pokemem.c
    ./ui/gtk/rollback.c
    ./ui/gtk/roms.c
    ./ui/gtk/statusbar.c
    ./ui/gtk/stock.c
    ./ui/null/null_ui.c
    ./ui/qt/debugger.cpp
    ./ui/qt/hexview.cpp
    ./ui/qt/keysyms.cpp
    ./ui/qt/menu_data.cpp
    ./ui/qt/moc_debugger.cpp
    ./ui/qt/moc_hexview.cpp
    ./ui/qt/moc_qt_ui.cpp
    ./ui/qt/moc_tapebrowser.cpp
    ./ui/qt/options.cpp
    ./ui/qt/qrc_qt_ui.cpp
    ./ui/qt/qt_ui.cpp
    ./ui/qt/qt_ui_c_wrap.c
    ./ui/qt/tapebrowser.cpp
    ./ui/scaler/scaler.c
    ./ui/scaler/scalers.c
    ./ui/scaler/scaler_hq2x.c
    ./ui/scaler/scaler_hq3x.c
    ./ui/scaler/scaler_hq4x.c
    ./ui/sdl/sdldisplay.c
    ./ui/sdl/sdljoystick.c
    ./ui/sdl/sdlkeyboard.c
    ./ui/sdl/sdlui.c
    ./ui/uijoystick.c
    ./ui/widget/about.c
    ./ui/widget/binary.c
    ./ui/widget/browse.c
    ./ui/widget/debugger.c
    ./ui/widget/error.c
    ./ui/widget/filesel.c
    ./ui/widget/memory.c
    ./ui/widget/menu.c
    ./ui/widget/menu_data.c
    ./ui/widget/options.c
    ./ui/widget/picture.c
    ./ui/widget/pokefinder.c
    ./ui/widget/pokemem.c
    ./ui/widget/query.c
    ./ui/widget/roms.c
    ./ui/widget/select.c
    ./ui/widget/text.c
    ./ui/widget/widget.c
    ./ui/win32/about.c
    ./ui/win32/binary.c
    ./ui/win32/browse.c
    ./ui/win32/confirm.c
    ./ui/win32/debugger.c
    ./ui/win32/fileselector.c
    ./ui/win32/hyperlinks.c
    ./ui/win32/memorybrowser.c
    ./ui/win32/picture.c
    ./ui/win32/pokefinder.c
    ./ui/win32/pokemem.c
    ./ui/win32/rollback.c
    ./ui/win32/roms.c
    ./ui/win32/statusbar.c
    ./ui/win32/win32display.c
    ./ui/win32/win32joystick.c
    ./ui/win32/win32keyboard.c
    ./ui/win32/win32mouse.c
    ./ui/win32/win32ui.c
    ./ui/xlib/keysyms.c
    ./ui/xlib/xdisplay.c
    ./ui/xlib/xerror.c
    ./ui/xlib/xjoystick.c
    ./ui/xlib/xkeyboard.c
    ./ui/xlib/xpixmaps.c
    ./ui/xlib/xpixmaps.c.in
    ./ui/xlib/xui.c
    ./ui.c
    ./uidisplay.c
    ./uimedia.c
    ./utils.c
    ./z80/coretest.c
    ./z80/opcodes_base.c
    ./z80/z80.c
    ./z80/z80_cb.c
    ./z80/z80_ddfd.c
    ./z80/z80_ddfdcb.c
    ./z80/z80_debugger_variables.c
    ./z80/z80_ed.c
    ./z80/z80_ops.c

    ./bitmap.h
    ./compat/getopt.h
    ./compat.h
    ./debugger/breakpoint.h
    ./debugger/commandy.h
    ./debugger/debugger.h
    ./debugger/debugger_internals.h
    ./display.h
    ./esxdos.hdf
    ./event.h
    ./fuse.h
    ./infrastructure/startup_manager.h
    ./input.h
    ./keyboard.h
    ./loader.h
    ./machine.h
    ./machines/machines.h
    ./machines/machines_periph.h
    ./machines/pentagon.h
    ./machines/scorpion.h
    ./machines/spec128.h
    ./machines/spec48.h
    ./machines/specplus3.h
    ./machines/tc2068.h
    ./memory_pages.h
    ./mempool.h
    ./menu.h
    ./module.h
    ./movie.h
    ./movie_tables.h
    ./options.h
    ./periph.h
    ./peripherals/dck.h
    ./peripherals/disk/beta.h
    ./peripherals/disk/crc.h
    ./peripherals/disk/didaktik.h
    ./peripherals/disk/disciple.h
    ./peripherals/disk/disk.h
    ./peripherals/disk/fdd.h
    ./peripherals/disk/opus.h
    ./peripherals/disk/plusd.h
    ./peripherals/disk/trdos.h
    ./peripherals/disk/upd_fdc.h
    ./peripherals/disk/wd_fdc.h
    ./peripherals/flash/am29f010.h
    ./peripherals/ide/divide.h
    ./peripherals/ide/divmmc.h
    ./peripherals/ide/divxxx.h
    ./peripherals/ide/ide.h
    ./peripherals/ide/simpleide.h
    ./peripherals/ide/zxatasp.h
    ./peripherals/ide/zxcf.h
    ./peripherals/ide/zxmmc.h
    ./peripherals/if1.h
    ./peripherals/if2.h
    ./peripherals/joystick.h
    ./peripherals/kempmouse.h
    ./peripherals/multiface.h
    ./peripherals/nic/enc28j60.h
    ./peripherals/nic/w5100.h
    ./peripherals/nic/w5100_internals.h
    ./peripherals/printer.h
    ./peripherals/scld.h
    ./peripherals/sound/ay.h
    ./peripherals/sound/covox.h
    ./peripherals/sound/fuller.h
    ./peripherals/sound/melodik.h
    ./peripherals/sound/sp0256.h
    ./peripherals/sound/specdrum.h
    ./peripherals/sound/uspeech.h
    ./peripherals/speccyboot.h
    ./peripherals/spectranet.h
    ./peripherals/ttx2000s.h
    ./peripherals/ula.h
    ./peripherals/usource.h
    ./phantom_typist.h
    ./pokefinder/pokefinder.h
    ./pokefinder/pokemem.h
    ./profile.h
    ./psg.h
    ./rectangle.h
    ./rzx.h
    ./screenshot.h
    ./settings.h
    ./slt.h
    ./snapshot.h
    ./sound/blipbuffer.h
    ./sound/qtsound.hpp
    ./sound/sfifo.h
    ./sound.h
    ./spectrum.h
    ./svg.h
    ./tape.h
    ./timer/timer.h
    ./ui/fb/fbdisplay.h
    ./ui/fb/fbkeyboard.h
    ./ui/fb/fbmouse.h
    ./ui/gtk/gtkcompat.h
    ./ui/gtk/gtkinternals.h
    ./ui/qt/debugger.hpp
    ./ui/qt/hexview.hpp
    ./ui/qt/options_internals.h
    ./ui/qt/qt_ui.hpp
    ./ui/qt/tapebrowser.hpp
    ./ui/qt/ui_debugger.h
    ./ui/qt/ui_debugger.hpp
    ./ui/qt/ui_hexview.h
    ./ui/qt/ui_hexview.hpp
    ./ui/qt/ui_qt_ui.h
    ./ui/qt/ui_qt_ui.hpp
    ./ui/qt/ui_tapebrowser.h
    ./ui/qt/ui_tapebrowser.hpp
    ./ui/scaler/scaler.h
    ./ui/scaler/scaler_internals.h
    ./ui/sdl/sdldisplay.h
    ./ui/sdl/sdljoystick.h
    ./ui/sdl/sdlkeyboard.h
    ./ui/ui.h
    ./ui/uidisplay.h
    ./ui/uijoystick.h
    ./ui/uimedia.h
    ./ui/widget/options_internals.h
    ./ui/widget/widget.h
    ./ui/widget/widget_internals.h
    ./ui/win32/about.h
    ./ui/win32/binary.h
    ./ui/win32/browse.h
    ./ui/win32/debugger.h
    ./ui/win32/hyperlinks.h
    ./ui/win32/memorybrowser.h
    ./ui/win32/picture.h
    ./ui/win32/pokefinder.h
    ./ui/win32/pokemem.h
    ./ui/win32/rollback.h
    ./ui/win32/roms.h
    ./ui/win32/select_template.h
    ./ui/win32/win32internals.h
    ./ui/win32/win32joystick.h
    ./ui/xlib/xdisplay.h
    ./ui/xlib/xkeyboard.h
    ./ui/xlib/xui.h
    ./utils.h
    ./z80/z80.h
    ./z80/z80_checks.h
    ./z80/z80_internals.h
    ./z80/z80_macros.h
)

add_custom_target(__autotools_files_${PROJECT_NAME}
    SOURCES
    configure.ac
    Makefile.am
    compat/Makefile.am
    data/Makefile.am
    debugger/Makefile.am
    hacking/Makefile.am
    infrastructure/Makefile.am
    lib/Makefile.am
    machines/Makefile.am
    man/Makefile.am
    peripherals/Makefile.am
    perl/Makefile.am
    pokefinder/Makefile.am
    sound/Makefile.am
    timer/Makefile.am
    ui/Makefile.am
    ui/qt/Makefile.am
    ui/fb/Makefile.am
    ui/gtk/Makefile.am
    ui/null/Makefile.am
    ui/scaler/Makefile.am
    ui/sdl/Makefile.am
    ui/widget/Makefile.am
    ui/wii/Makefile.am
    ui/win32/Makefile.am
    ui/xlib/Makefile.am
    unittests/Makefile.am
    z80/Makefile.am

    config.h
)

add_custom_target(__perl_scripts_${PROJECT_NAME}
    SOURCES
    ./keysyms.pl
    ./menu_data.pl
    ./perl/cpp-perl.pl
    ./settings-header.pl
    ./settings.pl
    ./ui/gtk/options-header.pl
    ./ui/gtk/options.pl
    ./ui/null/options-header.pl
    ./ui/null/options.pl
    ./ui/qt/options-header.pl
    ./ui/qt/options.pl
    ./ui/widget/mkfusefont.pl
    ./ui/widget/options-header.pl
    ./ui/widget/options.pl
    ./ui/win32/options-header.pl
    ./ui/win32/options-resource.pl
    ./ui/win32/options.pl
    ./ui/xlib/xstatusbar.pl
    ./z80/z80.pl
)
